--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -247,8 +247,8 @@
                                                                 </div>
                                                                 <div class="col-md-6">
                                                                     <div class="form-group">
-                                                                        <label for="address">Address(<small>province,
-                                                                                district, street</small>)</label>
+                                                                        <label for="address">Address(<small>street/town,
+                                                                                district, province</small>)</label>
                                                                         <input name="contact[address][streetAddress]"
                                                                             type="text" class="form-control mb-4"
                                                                             id="address" placeholder="Address" value="">
