--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -38,41 +38,51 @@
 
                                 <div class="">
                                     <ul class="contacts-block list-unstyled">
-                                        <li class="contacts-block__item">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-coffee">
-                                                <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path>
-                                                <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path>
-                                                <line x1="6" y1="1" x2="6" y2="4"></line>
-                                                <line x1="10" y1="1" x2="10" y2="4"></line>
-                                                <line x1="14" y1="1" x2="14" y2="4"></line>
+                                        <li class="contacts-block__item"><svg xmlns="http://www.w3.org/2000/svg"
+                                                width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                                stroke-linejoin="round" class="feather feather-pen-tool">
+                                                <path d="M12 19l7-7 3 3-7 7-3-3z"></path>
+                                                <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"></path>
+                                                <path d="M2 2l7.586 7.586"></path>
+                                                <circle cx="11" cy="11" r="2"></circle>
                                             </svg>
                                             <%= hostelliteInfo.education.degree.name %>
                                         </li>
+                                        <li class="contacts-block__item"><svg xmlns="http://www.w3.org/2000/svg"
+                                                width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                                stroke-linejoin="round" class="feather feather-home">
+                                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                                            </svg>
+                                            Hostel# : <%= hostelliteInfo.hostelInfo.hostelNo %>
+                                        </li>
                                         <li class="contacts-block__item">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-calendar">
-                                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                                                <line x1="16" y1="2" x2="16" y2="6"></line>
-                                                <line x1="8" y1="2" x2="8" y2="6"></line>
-                                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                                                class="feather feather-layout">
+                                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                                <line x1="3" y1="9" x2="21" y2="9"></line>
+                                                <line x1="9" y1="21" x2="9" y2="9"></line>
+                                            </svg> Room# :
+                                            <%= hostelliteInfo.hostelInfo.roomNo %>
+                                        </li>
+
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round"
+                                                class="feather feather-phone">
+                                                <path
+                                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                                                </path>
                                             </svg>
-                                            <%= hostelliteInfo.DOB[0] +" " + hostelliteInfo.DOB[1] +" " + hostelliteInfo.DOB[2] %>
+                                            <%= hostelliteInfo.contact.phoneNo %>
                                         </li>
-                                        <li class=" contacts-block__item">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="feather feather-map-pin">
-                                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                                                    <circle cx="12" cy="10" r="3"></circle>
-                                                </svg>
-                                                <%= hostelliteInfo.contact.address.streetAddress %>
-                                        </li>
+
+
                                         <li class="contacts-block__item">
                                             <a href="mailto:<%= hostelliteInfo.contact.email %>" class="d-flex"><svg
                                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -87,20 +97,34 @@
                                                 <%= hostelliteInfo.contact.email %>
                                             </a>
                                         </li>
-                                        <li class="contacts-block__item">
+
+                                        <li class=" contacts-block__item">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round"
-                                                class="feather feather-phone">
-                                                <path
-                                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
-                                                </path>
+                                                class="feather feather-map-pin">
+                                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                                <circle cx="12" cy="10" r="3"></circle>
                                             </svg>
-                                            <%= hostelliteInfo.contact.phoneNo %>
+                                            <%= hostelliteInfo.contact.address.streetAddress +", "+ hostelliteInfo.contact.address.country %>
+                                        </li>
+
+
+                                        <li class=" contacts-block__item">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-calendar">
+                                                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                                                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                                                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                                                </svg>
+                                                <%= hostelliteInfo.DOB[0] +" " + hostelliteInfo.DOB[1] +" " + hostelliteInfo.DOB[2] %>
                                         </li>
                                         <hr>
-                                        <li class="contacts-block__item text-center">
-                                            username: <%= hostelliteInfo.username%>
+                                        <li class=" contacts-block__item text-center">
+                                                    username: <%= hostelliteInfo.username%>
                                         </li>
                                     </ul>
                                 </div>
@@ -136,7 +160,7 @@
                                     </div>
                                     <div class="t-text">
                                         <p>
-                                            <%= hostelliteInfo.education.school.name %>
+                                            <%= hostelliteInfo.education.college.name %>
                                         </p>
                                     </div>
                                 </div>
@@ -153,31 +177,6 @@
                                             <%= hostelliteInfo.education.degree.name %>
                                         </p>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user-profile layout-spacing">
-                        <div class="widget-content widget-content-area">
-                            <h4 class="">Hostel</h4>
-                            <div class="user-info-list">
-
-                                <div class="">
-                                    <ul class="contacts-block list-unstyled">
-                                        <li class="contacts-block__item">
-                                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="feather feather-map-pin mb-2">
-                                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                                                    <circle cx="12" cy="10" r="3"></circle>
-                                                </svg>
-                                                Hostel# : <%= hostelliteInfo.hostelInfo.hostelNo %> <br> Room# :
-                                                    <%= hostelliteInfo.hostelInfo.roomNo %>
-                                            </div>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
