--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -27,14 +27,13 @@
             <div class="form-form-wrap border" style="min-width: 500px;">
                 <div class="form-container">
                     <div class="form-content">
-
                         <%- include('../partials/flash/flash.ejs') %>
-
-
-                            <h1 class="">Log In to <a href="index-2.html"><span
-                                        class="brand-name mb-5">Hostel</span></a>
+                            <h1 class="">
+                                <span class="brand-name mb-5">
+                                    Admin Log In
+                                </span>
                             </h1>
-                            <form class="text-left mt-5" method="post" action="/dormitory/student/login">
+                            <form class="text-left mt-5" method="post" action="/dormitory/admin/login">
                                 <div class="form">
 
                                     <div id="username-field" class="field-wrapper input">
