--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -98,7 +98,7 @@
 
     <!-- Text -->
     <script>
-        document.getElementById('username').value = 'aftabAlam';
+        document.getElementById('username').value = 'shoaib';
         document.getElementById('password').value = '123';
         //document.getElementById('submit').click();
     </script>
