--- a/views/partials/flash/flash.ejs
+++ b/views/partials/flash/flash.ejs
@@ -1,4 +1,6 @@
 <!-- flash successs -->
+<link rel="stylesheet" type="text/css" href="/assets/css/elements/alert.css">
+
 <% if (success.length) { %>
     <div class="alert alert-light-success border-0 mb-4" role="alert"> <button type="button" class="close"
             data-dismiss="alert" aria-label="Close"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
